# silmaclient

./: .gitignore  DEPLOYMENT.md  README.md  start.bat
.github/workflows/: ci.yml
deploy/: apache.conf  nginx-silmaclient.conf  silmaclient.service
silmaclient/: Cargo.toml  config.example.toml
silmaclient/src/: changelog.rs  config.rs  macros_store.rs  main.rs  mud_connection.rs  notices.rs  telnet.rs  tickets.rs  websocket.rs
web/: admin.html  index.html
web/css/: silmaclient.css
web/js/: silmaclient.js
